Support new stats

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -223,7 +223,7 @@
     "Statistics": "Statistics",
     "stats_module_avgRatings": "Average ratings",
     "stats_module_gameStats": "Game statistics",
-    "stats_module_highestSingle": "Highest single rating",
+    "stats_module_highestSingle": "All individual ratings",
     "stats_module_numPlays": "Play statistics",
     "stats_module_playerStats": "Player statistics",
     "stats_module_topPlayers": "Top players",
