Added player list page

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -171,6 +171,8 @@
     "PickAnyVariant": "Select any of",
     "PickOneVariant": "Select at most one of",
     "PickVariant": "Select variants",
+    "PlayerList": "Players",
+    "Players": "Players",
     "PleaseConsent": "Your consent is needed!",
     "PlayersAccepted": "So far the following players are willing to participate in the game: {{others}}.",
     "Playground": "Playground",
