Tag functionality moving to dev server

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -79,6 +79,7 @@
     "DurationHelp_one": "This challenge will expire after being accepted the first time.",
     "DurationHelp_other": "This challenge will expire after being accepted {{count}} times.",
     "DurationHelpPersistent": "This challenge will remain available until you revoke it.",
+    "EditTags": "Edit Tags",
     "EMail": "Email address",
     "EMailCode": "Emailed code",
     "EMailCodeHelp": "The login system just sent a code to the email address you provided. Please enter it here.",
@@ -201,6 +202,7 @@
     "RevokeChallenge": "Revoke challenge",
     "RotateBoard": "Rotate board",
     "Save": "Save",
+    "SaveChanges": "Save Changes",
     "Search": "Search",
     "Seating": "Seating",
     "Seating1": "I play first",
