Custom colours going for live testing

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -66,6 +66,7 @@
     "CurrentGamesCount_one": "current game",
     "CurrentGamesCount_other": "current games",
     "CurrentGamesList": "Current {{name}} Games",
+    "Custom": "Custom",
     "DebugModal": "Debugging information",
     "DefaultDisplay": "Default display",
     "DisableMoveConfirm": "Ask for confirmation before a move is submitted",
@@ -137,6 +138,7 @@
     "LogIn": "Log In",
     "LogOut": "Log Out",
     "MakeMove": "Make a move",
+    "ManagePalettes": "Manage Palettes",
     "MaxTime": "max time {{max}} hours",
     "Moves": "Moves",
     "MyDashboard": "Dashboard",
