# Conflicts: #	src/pages/Skeleton.js

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -96,6 +96,7 @@
     "Explore": "Explore",
     "ExportPNG": "Export PNG image",
     "FilterStars": "Only show starred games",
+    "Game": "Game",
     "GameAgainst": "{{game}} against {{opp}}",
     "GameInfo": "Game information",
     "GameInfoFor": "Game information for {{metaGame}}",
@@ -290,10 +291,50 @@
             "welcome": "This is where the action happens! The play screen for every game is structured the same way. The name of the game will always appear here, front and centre."
         }
     },
+    "Tournament": {
+        "Number": "Tournament Number",
+        "Tournaments": "Tournaments",
+        "Completion": "Completion",
+        "CompletionRate": "{{ratio}} games",
+        "Current": "Ongoing tournaments",
+        "Description": "Tournaments for a game and variant/s keep repeating for as long as there is enough interest. Tournaments consists of divisions, with each division having at most 10 players. After being created a tournament is open for registration for 2 weeks. If after the 2 week registration period there aren't at least 10 players registered, the tournament is cancelled. Otherwise the tournament starts, and the next tournament for the same game and variant/s is opened for registration. The next tournament starts a week after the current tournament ends. You will be registered for the next tournament automatically. Players are divided into divisions purely by their rating at the time the tournament starts. The highest rated players play in division 1, the next highest in division 2 and so on. Players are divided into divisions in such a way that all divisions have approximately the same number of players.",
+        "Division": "Division {{num}}",
+        "Duplicate": "There is already a tournament for this game and variant/s",
+        "Ended": "Date ended",
+        "History": "history",
+        "Join": "Join tournament",
+        "Name": "{{metaGame}} Tournament",
+        "ProposeNew": "Propose a new tournament",
+        "New2": "New tournaments",
+        "New1": "New tournament",
+        "NoneCompleted": "No tournaments have been completed yet.",
+        "NoneOld": "No tournament history yet.",
+        "NumCompleted": "{{numCompleted}} of {{numGames}} games have been completed",
+        "OldTitle": "Tournament History",
+        "Old": "History of completed {{metaGameName}} tournaments",
+        "Open": "Tournaments open for registration",
+        "Participants": "Participants",
+        "Player": "Player",
+        "Position": "Position",
+        "Rating": "Rating",
+        "RatingHelp": "Rating at beginning of tournament. Final tiebreak.",
+        "RecentlyCompleted": "Recently completed tournaments",
+        "Score": "Score",
+        "Starts": "Tournament starts",
+        "Started": "Date started",
+        "TieBreak": "Tiebreak",
+        "TieBreakHelp": "See wiki for how this is computed.",
+        "VariantsName": "{{metaGame}} Tournament ({{variants}})",
+        "Visit": "Visit tournament",
+        "Winner": "Winner",
+        "DivisionWinner": "Winner: {{winner}}",
+        "Withdraw": "Withdraw"
+    },
     "TwoPlayersChallengeDescription": "You challenged {{other}} to a game of {{game}}",
     "UnratedGame": "This will be an unrated game.",
     "UpdateNote": "Update game note",
     "UserSettings": "User Settings",
+    "Variants": "Variants",
     "View": "View",
     "VisitGame": "Visit game",
     "Waiting": "Waiting on other players to submit their moves",
