Fix tournament sorting and some cleanup.

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -301,7 +301,7 @@
         "Division": "Division {{num}}",
         "Duplicate": "There is already a tournament for this game and variant/s",
         "Ended": "Date ended",
-        "History": "history",
+        "History": "History",
         "Join": "Join tournament",
         "Name": "{{metaGame}} Tournament",
         "ProposeNew": "Request a new tournament",
