Support 'no exploration' mode

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -38,6 +38,7 @@
     "ChooseColors": "Choose color scheme",
     "ChooseGame": "Choose a game",
     "ChooseMove": "Choose move",
+    "ChooseNoExplore": "Disable exploration?",
     "ChooseOpponent": "Choose an opponent",
     "ChooseRated": "Rated?",
     "Claim": "Claim",
@@ -120,6 +121,8 @@
     "HelpClockMax": "Remaining time won't become more than this.",
     "HelpClockSoft": "The opponent must manually claim the win.",
     "HelpClockStart": "Time on clock at the start of the game.",
+    "HelpNoExploreTrue": "Players will be forcibly prevented from using the built-in exploration feature.",
+    "HelpNoExploreFalse": "Players may choose to use the built-in exploration feature.",
     "HelpRated": "This game will be rated.",
     "HelpUnRated": "This game will not be rated.",
     "HideDetails": "Hide descriptions",
@@ -153,6 +156,7 @@
     "NextGame": "Next game",
     "No": "No",
     "NoChallengeResponse": "No challenges needing a response",
+    "NoExploreTrue": "The built-in exploration feature will be forcibly disabled for this game.",
     "NoOpponentMove": "No games waiting on opponent's move.",
     "NoOtherPlayersAccepted": "No other players have accepted yet.",
     "NoStandingChallenges": "No standing challenges",
