--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -178,6 +178,7 @@
     "OtherPlayers": "So far the following other players are willing to participate in the game: {{others}}.",
     "OtherPlayersAccepted": "The following other players have already accepted: {{others}}",
     "Or": "or",
+    "PendingSubmit": "Your move still needs to be submitted.",
     "PickAnyVariant": "Select any of",
     "PickOneVariant": "Select at most one of",
     "PickVariant": "Select variants",
