Add 'hours' to clock description

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -33,9 +33,9 @@
     "ChangeRenderOptions": "Change board display options",
     "ChooseDisplay": "Choose how the board should be displayed",
     "ChooseClockHard": "Hard Time?",
-    "ChooseClockIncrement": "Clock increment",
-    "ChooseClockMax": "Clock max",
-    "ChooseClockStart": "Clock start",
+    "ChooseClockIncrement": "Clock increment (hours)",
+    "ChooseClockMax": "Clock max (hours)",
+    "ChooseClockStart": "Clock start (hours)",
     "ChooseColors": "Choose color scheme",
     "ChooseGame": "Choose a game",
     "ChooseMove": "Choose move",
