--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -353,9 +353,13 @@
     "ChallengedTwoPlayers": "{{game}} against {{other}}",
     "ChallengeFrom": "{{game}} challenge from {{challenger}}",
     "ChallengeResponse": "Response needed",
+    "ChallengeResponseComment": "Comment",
+    "ChallengeResponseCommentHelp": "Comment to challenger on your response.",
+    "ChallengeRevokeCommentHelp": "Comment on revoking your challenge.",
+    "ChallengeRevokeCommentHelp2": "Comment on revoking your previous acceptance.",
     "ChallengeResponseDesc": "{{opp}} challenged you to a game of {{game}}",
     "ChallengerFirst": "Challenger plays first",
-    "ChallengerNotes": "Challenger notes: ",
+    "ChallengerNotes": "Challenger comments: ",
     "ChallengerSecond": "Challenger plays second",
     "ChallengeType": "Challenge type",
     "ChallengeTypeOpen": "Open",
@@ -494,7 +498,9 @@
     "NoOpponentMove": "No games waiting on opponent's move.",
     "NoOtherPlayersAccepted": "No other players have accepted yet.",
     "NoStandingChallenges": "No standing challenges",
+    "Note": "Notes",
     "Notes": "Notes: ",
+    "NotesHelp": "Notes for this challenge (max 128 characters).",
     "NotHardTime": "No hard limit",
     "NotificationSettings": "Notification settings (save instantly)",
     "NotifyLabel-yourturn": "Your turn (twice daily)",
