Allow deletion of exploration subtrees. Clean up a few things in the tournament display.

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -434,6 +434,8 @@
     "CompletedGamesList": "Completed {{name}} Games",
     "CompletedGamesHelp": "To keep the dashboard manageable, games drop off this list 7 days after the \"last seen\" date. Click the Clear button to remove it immediately. New chat will cause older games to resurface, restarting the 7-day clock. Visit the Games page to access older completed games.",
     "CompleteMove": "Complete move",
+    "ConfirmDeleteSubtree": "Delete exploration subtree",
+    "ConfirmDeleteSubtreeDesc": "This will delete the current (explored) move and it's subtree. Are you sure you want to delete the subtree?",
     "ConfirmMove": "Confirm move submission",
     "ConfirmMoveDesc": "Are you sure you want to submit this move?",
     "ConfirmMoveHelp": "If you prefer not to get asked for confirmation, you can disable this in your user settings.",
@@ -449,6 +451,8 @@
     "CustomCSS": "Customize CSS",
     "DebugModal": "Debugging information",
     "DefaultDisplay": "Default display",
+    "Delete": "Delete",
+    "DeleteSubtree": "Delete exploration subtree",
     "DisableMoveConfirm": "Ask for confirmation before a move is submitted",
     "DisablePush": "Push notifications are currently enabled",
     "DisplayName": "Display name",
