Add customization of colour context, and change default gridline colour

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -525,6 +525,7 @@
     "LogIn": "Log In",
     "LogOut": "Log Out",
     "MakeMove": "Make a move",
+    "ManageContexts": "Manage Colour Contexts",
     "ManagePalettes": "Manage Palettes",
     "MaxTime": "max time {{max}} hours",
     "Moves": "Moves",
