Fix missing translation. Tweak Tournaments sorting.

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -737,6 +737,7 @@
     "UpdateNote": "Update game note",
     "UserSettings": "User Settings",
     "Variants": "Variants",
+    "Variant": "Variant",
     "View": "View",
     "VisitGame": "Visit game",
     "Waiting": "Waiting on other players to submit their moves",
